# Recuse

./: .gitattributes  .gitignore  LICENSE  README.md  RESEARCH-ROADMAP.md  ULTRAPLAN-RECUSE.md
.github/workflows/: build-deb.yml  build-webhook-image.yml
adapters/http/: README.md  server.py
adapters/kubernetes/: Dockerfile  README.md  config.go  decide.go  decide_test.go  go.mod  log.go  main.go  main_test.go  telemetry.go
adapters/kubernetes/hack/: gen-certs.sh
adapters/kubernetes/manifests/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  service.yaml  tls-secret.placeholder.yaml  validatingwebhook.yaml
adapters/postgres/: README.md  go.mod  go.sum  log.go  main.go  proxy_test.go  recuse-pg-proxy.service  telemetry.go
adapters/ssh/: README.md  banner.txt  bootstrap.sh  install.sh  pam-sshd.snippet  recuse-pam-hook.sh  recuse.conf.example  sshd_config.snippet  uninstall.sh
adapters/telemetry/: README.md  aggregate.py  sample-telemetry.json  test_aggregate.py
blog/: medium-recuse.md
experiments/agentgovbench/: PREREGISTRATION.md  README.md  analyze.py  bench.py  environments.py  providers.py  secrets.example.json  signals.py
experiments/agentgovbench/leaderboard/: index.html
experiments/authority/: README.md  analyze.py  authority.py  design.md  test_authority.py
experiments/halt-fix/: README.md  interceptor.py  salience.py  test_interceptor.py
experiments/phase2/: DESIGN.md  README.md  analyze_ci.py  analyze_directives.py  analyze_stop.py  batch_directives.py  batch_run.py  batch_stop.py  code_outcomes.py  directives.py  make_figure.py  mock_agent.py  providers.py  run_openai.py  secrets.example.json  stop_experiment.py  test_directives.py  tools.py
packaging/deb/debian/: changelog  conffiles  control  copyright  postinst  postrm  prerm  recuse-ssh.install  rules
packaging/deb/etc/recuse/: recuse.conf
packaging/deb/usr/sbin/: recuse-pam-hook
packaging/deb/usr/share/recuse/: banner.txt.template  recuse.conf.example  render-banner
packaging/pypi/: CHANGELOG.md  NOTICE  README.md  ROADMAP.md  pyproject.toml
packaging/pypi/src/recuse/: __init__.py  aio.py  cli.py  emit.py  halt.py  hooks.py  mcp.py  policy.py  signal.py
packaging/pypi/src/recuse/integrations/: __init__.py  anthropic_sdk.py  langchain.py  openai_agents.py
packaging/pypi/tests/: test_aio.py  test_emit.py  test_halt.py  test_hooks.py  test_integrations.py  test_mcp.py  test_policy.py  test_signal.py
paper/: REVISION-NOTES.md  recuse-paper.md  recuse-paper.tex  references.bib  related_work.tex
paper-stop/: recuse-stop.md  recuse-stop.tex  references.bib  related_work.tex
paper-tmlr/: REVISION-STRENGTHENING.md  anonymize.py  gradient-section-DRAFT.tex  recuse-tmlr-anon.tex  recuse-tmlr.tex  recuse-workshop.tex  references.bib
spec/: recuse-signal-0.3-ietf-draft.md  recuse-signal-v0.1.md  recuse-signal-v0.2.md
